--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,3 +1,5 @@
-<h1>About Us</h1>
-<%# instance var can now be accessed in embedded ruby tags %>
-<p><%= @about_us %></p>
+<div class="container text-center">
+  <h1>About Us</h1>
+  <%# instance var can now be accessed in embedded ruby tags %>
+  <p><%= @about_us %></p>
+</div>
